# comfyui-save-image-pro

./: .gitignore  CHANGELOG.md  README.md  __init__.py  pyproject.toml  save_image_advanced.py  save_image_extended.py  save_image_simple.py
core/: __init__.py  config.py  counter_manager.py  error_handler.py  filename_generator.py  image_saver.py  job_data_exporter.py  metadata_handler.py  path_manager.py  performance_optimizer.py
docs/: 优化建议.md  开发者文档.md  用户手册.md  重构分析报告.md  重构完成总结.md
strategies/: __init__.py  avif_strategy.py  bmp_strategy.py  format_strategy.py  gif_strategy.py  jpeg_strategy.py  jxl_strategy.py  png_strategy.py  tiff_strategy.py  webp_strategy.py
tests/: __init__.py  run_tests.py  test_config.py  test_filename_generator.py
