[project]
name = "comfyui-save-image-pro"
description = "专业级 ComfyUI 图像保存插件，支持多格式、自定义命名和高级功能"
version = "latest"
license = "GPL-3.0"
dependencies = ["piexif", "pillow", "pillow-avif-plugin"]

[project.urls]
Repository = "https://github.com/weekii/comfyui-save-image-pro"
Documentation = "https://github.com/weekii/comfyui-save-image-pro/blob/main/docs/用户手册.md"
Issues = "https://github.com/weekii/comfyui-save-image-pro/issues"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "weekii"
DisplayName = "ComfyUI Save Image Pro"
Icon = ""
